@@ -1,6 +1,11 @@
 2021-06-30  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	PR gdb/27830
+	* gdb.threads/stepi-over-clone.exp: Add additional tests.
+
+2021-06-30  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	PR gdb/27830
 	* gdb.threads/stepi-over-clone.c: New file.
 	* gdb.threads/stepi-over-clone.exp: New file.
 
